[package]
name = "omni-cli"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A simple CLI for converting between commonly used configuration file formats."
repository = "https://github.com/fedfontana/omni"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
erased-serde = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"
toml = "0.8.10"

[[bin]]
name = "omni"
path = "src/main.rs"
